--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,9 @@
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
+    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
+    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -84,7 +84,33 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
 }
+main {
+  padding: 1rem;
+}
+nav {
+  display: flex;
+  gap: 1rem;
+}
+hgroup {
+  margin-top: 3rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+h1 {
+  font-size: 5rem;
+}
 
+h2 {
+  font-size: 2.5rem;
+}
+input {
+  font-size: 1.5rem;
+  padding: 0.5rem;
+  border-radius: 5px;
+  box-shadow: none;
+  border: none;
+}
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
