--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -174,6 +174,9 @@ a {
   color: inherit;
   text-decoration: none;
 }
+hgroup {
+  text-shadow: 0 0 2px var(--apple-light-gray);
+}
 
 @media (prefers-color-scheme: dark) {
   html {
@@ -185,5 +188,8 @@ a {
       var(--apple-lightest-gray),
       var(--apple-lighter-gray)
     );
+  }
+  hgroup {
+    text-shadow: none;
   }
 }
