--- a/src/components/HabitsPage/PercentageCircle/PercentageCircle.module.css
+++ b/src/components/HabitsPage/PercentageCircle/PercentageCircle.module.css
@@ -1,3 +1,13 @@
 .progressCircle {
   stroke: var(--apple-blue);
 }
+
+.innerObject {
+}
+.container {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
