--- a/src/components/HabitsPage/ColorSelector/ColorSelector.module.css
+++ b/src/components/HabitsPage/ColorSelector/ColorSelector.module.css
@@ -1,18 +1,17 @@
 .paletteContainer {
-  position: absolute;
   border: 1px solid var(--apple-light-gray);
-  width: 80vw;
-  height: 80vw;
-  bottom: 50%;
-  left: 50%;
-  top: 10;
-  transform: translate(-50%, 50%);
+  /* width: 100%; */
+  padding: 1rem;
   background-color: var(--apple-lighter-gray);
   border-radius: 5px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
   gap: 1rem;
+  width: 90vw;
+  height: 13rem;
+  margin-top: 1rem;
+  overflow: hidden;
 }
 
 .color {
@@ -25,12 +24,70 @@
 
 .backdrop {
   position: absolute;
-  z-index: 3000;
-  display: block;
-  backdrop-filter: blur(15px);
-  height: 100vh;
-  width: 100vw;
-  top: -30vh;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.3);
+  justify-content: center;
+  z-index: 2002;
+  overflow: hidden;
+  animation: 0.5s appear linear;
+}
+
+.collapse {
+  position: absolute;
+  justify-content: center;
+  z-index: 2002;
+  overflow: hidden;
+  opacity: 0;
+  animation: 0.5s ex linear;
+}
+
+.colorSelectorContainer {
+  margin-bottom: 15rem;
+  animation: 0.5s expand linear;
+}
+
+.close {
+  margin-bottom: 0;
+  animation: 0.5s close linear;
+}
+
+@keyframes expand {
+  from {
+    margin-bottom: 0;
+  }
+
+  to {
+    margin-bottom: 15rem;
+  }
+}
+
+@keyframes close {
+  from {
+    margin-bottom: 15rem;
+  }
+
+  to {
+    margin-bottom: 0;
+  }
+}
+@keyframes appear {
+  from {
+    height: 0;
+    opacity: 0;
+  }
+
+  to {
+    height: 13rem;
+    opacity: 1;
+  }
+}
+
+@keyframes ex {
+  from {
+    height: 13rem;
+    opacity: 1;
+  }
+
+  to {
+    height: 0;
+    opacity: 0;
+  }
 }
