--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -123,6 +123,13 @@ input {
   box-shadow: none;
   border: none;
 }
+select {
+  font-size: 1.5rem;
+  padding: 0.5rem;
+  border-radius: 5px;
+  box-shadow: none;
+  border: none;
+}
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
